# MCPServer.cpp

./: .dockerignore  .env.auth.example  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_zh.md  config.ini  config.ini.example
.github/workflows/: cmake-multi-platform.yml  package.yml
certs/: server.crt  server.key
cmake/: CPackConfig.cmake  CopyConfig.cmake  CopyIniConfig.cmake  EnablePython.cmake  FindMCPOpenSSL.cmake  MCPConfig.cmake.in  MCPConfigVersion.cmake.in  PluginCommon.cmake
config/: config.hpp  config_observer.hpp
docs/: AUTH.md  AUTH_zh.md  HTTPS_AND_CERTIFICATES.md  HTTPS_AND_CERTIFICATES_zh.md  PYTHON_PLUGINS.md  PYTHON_PLUGINS_zh.md
examples/: CMakeLists.txt
include/openssl/: aes.h  asn1err.h  asn1t.h  async.h  bio.h  bioerr.h  bnerr.h  buffer.h  buffererr.h  camellia.h  cmac.h  cmp.h  cms.h  cmserr.h  comperr.h  conf_api.h  conferr.h  core.h  core_dispatch.h  core_names.h  crypto.h  cryptoerr.h  cterr.h  decoder.h  decodererr.h  dh.h  dsaerr.h  encoder.h  encodererr.h  engine.h  engineerr.h  err.h  evp.h  fipskey.h  hpke.h  http.h  lhash.h  macros.h  md2.h  mdc2.h  (+29 more)
plugins/: CMakeLists.txt  README.md  README_zh.md
plugins/official/: CMakeLists.txt
plugins/official/example_stream_plugin/: CMakeLists.txt  example_stream_plugin.cpp  tools.json
plugins/official/file_plugin/: CMakeLists.txt  file_plugin.cpp  tools.json
plugins/official/http_plugin/: CMakeLists.txt  http_plugin.cpp  tools.json
plugins/official/python_example_plugin/: CMakeLists.txt  README.md  build_plugin.py  python_example_plugin.py  tools.json
plugins/official/safe_system_plugin/: CMakeLists.txt  safe_system_plugin.cpp  tools.json
plugins/pluginhub/: CMakeLists.txt  pluginhub.cpp  pluginhub.hpp
plugins/sdk/: CMakeLists.txt  mcp_plugin.h  mcp_python_plugin.py  mcp_sdk.py  pybind_module.cpp  pybind_module_plugin.cpp  python_plugin_CMakeLists.txt  tool_info_parser.cpp  tool_info_parser.h
resources/: sample.txt
scripts/: format.py
src/: CMakeLists.txt  main.cpp
src/Auth/: AuthManager.hpp
src/Prompts/: CMakeLists.txt  prompt.cpp  prompt.h
src/Resources/: CMakeLists.txt  resource.cpp  resource.h
src/business/: CMakeLists.txt  plugin_manager.cpp  plugin_manager.h  python_plugin_instance.cpp  python_plugin_instance.h  python_runtime_manager.cpp  python_runtime_manager.h  request_handler.cpp  request_handler.h  rpc_router.cpp  rpc_router.h  tool_registry.cpp  tool_registry.h
src/core/: CMakeLists.txt  Singleton.h  executable_path.cpp  executable_path.h  io_context_pool.hpp  logger.cpp  logger.h  mcp_dispatcher.cpp  mcp_dispatcher.h  mcpserver_api.h  server.cpp  server.h
src/metrics/: CMakeLists.txt  metrics_manager.cpp  metrics_manager.h  performance_metrics.h  rate_limiter.cpp  rate_limiter.h
src/protocol/: CMakeLists.txt  json_rpc.cpp  json_rpc.h  tool.h
src/routers/: CMakeLists.txt  exit.hpp  initialize.hpp  prompts_get.hpp  prompts_list.hpp  resources_list.cpp  resources_list.hpp  resources_read.cpp  resources_read.hpp  resources_subscribe.cpp  resources_subscribe.hpp  tool_list.hpp  tools_call.hpp
src/transport/: CMakeLists.txt  LRUCache.hpp  base_transport.cpp  base_transport.h  http_handler.cpp  http_handler.h  http_transport.cpp  http_transport.h  https_transport.cpp  https_transport.h  mcp_cache.cpp  mcp_cache.h  session.cpp  session.h  sse_transport.cpp  sse_transport.h  ssl_session.cpp  ssl_session.h  stdio_transport.cpp  stdio_transport.h  tcp_session.cpp  tcp_session.h  transport_types.h
tests/: CMakeLists.txt  mcp_cache_test.cc  test.bash  test.py  test_python_plugin.py  test_server_manual.py  test_stream_example.py
tools/: CMakeLists.txt  generate_cert.cpp  plugin_ctl.cpp
utils/: CMakeLists.txt  auth_utils.cpp  auth_utils.h  session_id.h  utf8_encode.h
version/: CMakeLists.txt  version.h.in
