function(add_test_executable name)
add_executable(${name} ${ARGN})
target_link_libraries(${name} PRIVATE gtest gtest_main)
target_link_libraries(${name} PRIVATE mcp_core mcp_transport)
target_include_directories(${name} PRIVATE ${PROJECT_SOURCE_DIR}/third_party/httplib)
target_include_directories(${name} PRIVATE ${PROJECT_SOURCE_DIR}/third_party)
target_include_directories(${name} PRIVATE ${PROJECT_SOURCE_DIR}/src)
add_test(NAME ${name} COMMAND ${name})
target_include_directories(${name} PRIVATE ${PROJECT_SOURCE_DIR}/third_party/googletest/gooletest/include)
endfunction()

file(GLOB_RECURSE TEST_SOURCES *_test.cc)
foreach(test_file ${TEST_SOURCES})
    get_filename_component(test_name ${test_file} NAME_WE)
    add_test_executable(${test_name} ${test_file})
endforeach()
